# chemclaw

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  BACKLOG.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
db/init/: 00_schema_version.sql  01_schema.sql  02_harness.sql  02_research_reports.sql  03_hypotheses.sql  04_doc_origin.sql  05_contextual_chunks.sql  06_skill_library.sql  07_maturity_tiers.sql  08_forged_tools.sql  09_paperclip.sql  10_forged_tool_scope.sql  11_optimizer.sql  12_security_hardening.sql  13_agent_sessions.sql  14_agent_session_extensions.sql  15_feedback_prompt_link.sql  16_db_audit_fixes.sql  17_unified_confidence_and_temporal.sql  18_admin_roles_and_audit.sql  18_finish_reason_widen.sql  18_observability.sql  19_agent_todos_unique_ordering.sql  19_config_settings.sql  19_observability.sql  19_reaction_optimization.sql  20_conditions_schema.sql  20_redaction_patterns.sql  21_optimization_campaigns.sql  21_permission_policies.sql  22_admin_rls_bootstrap_helpers.sql  22_feature_flags.sql  23_qm_results.sql  24_compound_fingerprints.sql  25_compound_ontology.sql  26_genchem.sql  27_job_queue.sql  28_screens.sql  29_workflows.sql  30_mock_eln_schema.sql  (+57 more)
db/migrations/: 202604230001_research_reports.sql
db/seed/: 01_sample_data.sql  02_prompt_registry.sql  03_deep_research_prompt.sql  03_synthesis_planner_prompt.sql  04_unified_system_prompt.sql  05_harness_tools.sql  06_kg_first_system_prompt.sql  07_wiki_synthesis_prompt.sql  08_wiki_contradiction_prompt.sql  09_universal_extraction_config.sql  10_extraction_registry_xtb.sql  11_extraction_registry_wave_1.sql  12_extraction_registry_wave_2.sql  13_extraction_registry_wave_3.sql  13_llm_inference_config.sql  14_chemistry_compute_results_flag.sql  14_extraction_registry_phase_2.sql  20_mock_eln_data.sql  21_fake_logs_data.sql
docs/: PARITY.md  contributing.md  security-notes.md  stub-inventory.md
docs/adr/: 001-architecture.md  004-harness-engineering.md  005-data-layer-revision.md  006-sandbox-isolation.md  007-hook-system-rebuild.md  008-collapsed-react-loop.md  009-permission-and-decision-contract.md  010-deferred-phases.md  011-synthesis-campaign-orchestration.md  012-knowledge-wiki-projection.md  013-anthropic-agent-sdk-evaluation.md
docs/plans/: 2026-04-27-harness-control-plane-rebuild.md  2026-05-10-chemistry-agent-feature-gaps.md  2026-05-14-tranche-1-security-fixes.md  2026-05-14-universal-knowledge-accumulation-phase-0.md  2026-05-14-universal-knowledge-accumulation.md  agent-claw-autonomy-upgrade.md  bo-chromatography-implementation-plan.md  bo-chromatography-method-optimization.md  clean-slate-audit.md  eln-mock-and-logs-sciy.md  knowledge-wiki-projection.md  mock-source-testbed.md  post-v1.0.0-hardening-round-3.md  production-readiness-round.md  remaining-followups-plan.md
docs/research/: kg-transfer-learning.md
docs/runbooks/: add-tenant.md  agent-filesystem-tools.md  autonomy-upgrade.md  backup-and-restore.md  change-llm-provider.md  chromatography-method-optimization.md  disable-tool.md  forged-tool-lifecycle.md  harness-rollback.md  knowledge-wiki-curation.md  local-dev.md  monty-enable-and-rollback.md  post-v1.0.0-hardening.md  redaction-pattern-management.md  rotate-mcp-auth-key.md  synthesis-campaign-lifecycle.md
docs/tools/: README.md  builtin-tools-a-l.md  builtin-tools-m-z.md  builtin-tools-qm.md  hooks.md  mcp-services.md  shared-types.md  skills.md
documentation/: Autonomous_Agents_Pharma_CAD_WhitePaper.docx  NemoClaw_Pharma_RD_COMPLETE_v6_FINAL.docx  compass_artifact_wf-40173b99-2b89-43aa-b406-a82cea73e834_text_markdown.md  compass_artifact_wf-5d3490c4-887e-4415-8ad5-c0b4c3f6cf42_text_markdown.md  compass_artifact_wf-9bb28ee7-20f4-41ea-a066-72400cc47cd8_text_markdown.md
hooks/: anti-fabrication.yaml  apply-skills.yaml  budget-guard.yaml  compact-window.yaml  compute-result-writer.yaml  detect-mcp-leakage.yaml  fact-id-consistency-guard.yaml  foundation-citation-guard.yaml  init-scratch.yaml  kg-conclusion-buffer.yaml  kg-conclusion-extractor.yaml  loop-detector.yaml  permission.yaml  post-compact-telemetry.yaml  post-tool-batch-telemetry.yaml  post-tool-failure-telemetry.yaml  redact-secrets.yaml  redact-tool-output.yaml  scheduled-substance-gate.yaml  session-end-telemetry.yaml  session-events.yaml  session-sandbox-close.yaml  source-cache.yaml  subagent-start-telemetry.yaml  subagent-stop-telemetry.yaml  tag-maturity.yaml  task-completed-telemetry.yaml  task-created-telemetry.yaml  tool-invocation-emitter.yaml  user-prompt-submit-telemetry.yaml  wiki-human-block-guard.yaml
infra/helm/: Chart.yaml  prod-values.yaml  values.yaml
infra/promtail/: promtail-config.yaml
sample-data/: eln-experiments-sample.json
sample-data/documents/: SOP-suzuki-coupling.md  literature-summary-pd-catalysts-electron-poor.md  method-validation-hplc-nce001.md  report-NCE001-route-development.md
sample-data/workflow_templates/: fragment_grow_and_score.json  ligand_screen.json  tautomer_pka_panel.json
scripts/: backfill_kg_group_id.py  backup_test_restore.sh  check-logs-pipeline.sh  check_event_vocabulary.sh  check_init_self_record.sh  mcp-rollcall.sh  resync-main.sh  smoke.sh  tabicl_pca_coldfit.py
services/: _constraints.txt
services/agent/: Dockerfile  package.json  tsconfig.json
services/agent-claw/: README.md  eslint.config.mjs  package.json  vitest.config.ts
services/common/: __init__.py  config_registry.py
services/frontend/: Dockerfile  chart_spec.py  chat_client.py  db.py  requirements.txt  settings.py  skill_client.py  streamlit_app.py
services/litellm/: config.yaml
tests/: conftest.py
tools/: .gitignore
tools/cli/: README.md  pyproject.toml
tools/cli/chemclaw_cli/: __init__.py  __main__.py  app.py  config.py  session_store.py  sse.py
tools/cli/chemclaw_cli/commands/: __init__.py  chat.py
tools/cli/tests/: conftest.py  test_chat.py  test_config.py  test_session_store.py  test_sse.py
(+1148 files in other folders)
