[project]
name = "chemclaw"
version = "0.0.1"
description = "ChemOS Knowledge Intelligence Agent — autonomous chemistry knowledge system"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "ChemClaw contributors" }]

# The repo is a multi-service workspace. Root `pyproject.toml` is a stub;
# each service has its own requirements.txt or pyproject.toml. Install them
# into a shared .venv for local development via the Makefile.
dependencies = []

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

# Root pyproject is a workspace stub — it ships no importable package.
# Without this, setuptools auto-discovery trips over multiple top-level
# directories (services, db, tests, scripts, documentation...) and refuses
# to build the editable install. Declaring "no modules" fixes
# `pip install -e ".[dev]"` on any fresh environment.
[tool.setuptools]
py-modules = []

[project.optional-dependencies]
# Aggregate dev-only dependencies usable across services.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["documentation"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "SIM", "RUF"]
ignore = [
    "E501",  # long lines handled by formatter
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/.*", "documentation/.*"]

[tool.pytest.ini_options]
testpaths = ["tests", "tools/cli/tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that require live external services (Postgres, Neo4j, etc.)",
]
