[project]
name = "chemclaw"
version = "0.0.1"
description = "ChemOS Knowledge Intelligence Agent — autonomous chemistry knowledge system"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "ChemClaw contributors" }]

# The repo is a multi-service workspace. Root `pyproject.toml` is a stub;
# each service has its own requirements.txt or pyproject.toml. Install them
# into a shared .venv for local development via the Makefile.
dependencies = []

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

# Root pyproject is a workspace stub — it ships no importable package.
# Without this, setuptools auto-discovery trips over multiple top-level
# directories (services, db, tests, scripts, documentation...) and refuses
# to build the editable install. Declaring "no modules" fixes
# `pip install -e ".[dev]"` on any fresh environment.
[tool.setuptools]
py-modules = []

[project.optional-dependencies]
# Aggregate dev-only dependencies usable across services.
# ruff is pinned because the broader `>=0.6` range pulls in new lint
# rules in each release that we have not yet adopted; PR-1 introduces
# the gate, follow-up PRs in this cleanup wave pay down the existing
# violations.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6,<0.7",
    "mypy>=1.11",
    "httpx>=0.27",
    "diff-cover>=9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["documentation"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "SIM", "RUF"]
# PR-1 (refactor/tooling) introduces ruff as part of `make lint`. The
# repo accumulated ~270 violations of these rules before any gate was
# in place; we silence them here so `make lint` is clean. PR-N (cleanup)
# pays them down rule-by-rule and removes entries from this list.
# TODO(PR-N): re-enable each rule below as the underlying issues are fixed.
ignore = [
    "E501",  # long lines handled by formatter
    "F401",  # unused-import — pre-existing, paydown PR-N
    "F541",  # f-string-missing-placeholders — paydown PR-N
    "F841",  # unused-variable — paydown PR-N
    "I001",  # unsorted-imports — paydown PR-N (apply `ruff format`)
    "B008",  # function-call-in-default-argument — Pydantic Field idiom
    "B017",  # assert-raises-exception — paydown PR-N
    "B904",  # raise-without-from-inside-except — paydown PR-N
    "B905",  # zip-without-explicit-strict — paydown PR-N
    "C420",  # unnecessary-dict-comprehension-for-iterable — paydown PR-N
    "E402",  # module-import-not-at-top-of-file — paydown PR-N (test guards)
    "N802",  # invalid-function-name — chemistry naming idioms
    "N803",  # invalid-argument-name — chemistry naming idioms
    "N806",  # non-lowercase-variable-in-function — chemistry naming idioms
    "N818",  # error-suffix-on-exception-name — paydown PR-N
    "RUF001",  # ambiguous-unicode-character-string — chemistry strings
    "RUF002",  # ambiguous-unicode-character-docstring — chemistry strings
    "RUF003",  # ambiguous-unicode-character-comment — chemistry comments
    "RUF013",  # implicit-optional — paydown PR-N
    "RUF019",  # unnecessary-key-check — paydown PR-N
    "RUF022",  # unsorted-dunder-all — paydown PR-N
    "RUF100",  # unused-noqa — paydown PR-N (older noqa lines)
    "SIM102",  # collapsible-if — paydown PR-N
    "SIM105",  # suppressible-exception — sometimes intentional
    "SIM108",  # use-ternary-operator — paydown PR-N
    "SIM110",  # reimplemented-builtin — paydown PR-N
    "SIM114",  # if-with-same-arms — paydown PR-N
    "SIM115",  # open-file-with-context-handler — paydown PR-N
    "SIM117",  # multiple-with-statements — paydown PR-N
    "UP007",  # non-pep604-annotation — paydown PR-N
    "UP017",  # datetime-timezone-utc — paydown PR-N (mass migration)
    "UP035",  # deprecated-import — paydown PR-N
    "UP037",  # quoted-annotation — paydown PR-N
    "UP038",  # non-pep604-isinstance — paydown PR-N
    "UP041",  # timeout-error-alias — paydown PR-N
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/.*", "documentation/.*"]

[tool.pytest.ini_options]
testpaths = ["tests", "tools/cli/tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that require live external services (Postgres, Neo4j, etc.)",
]

[tool.coverage.run]
# Branch coverage helps the diff-cover gate flag missed conditional paths
# on touched lines. Source includes every shipped service, but excludes
# tests, vendored docs, and the legacy importer that's been retired
# from the live path.
branch = true
source = ["services"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "services/ingestion/eln_json_importer.legacy/*",
    "documentation/*",
]
parallel = true
data_file = ".coverage"

[tool.coverage.report]
# We want failures on uncovered code, not on parse-time complaints.
show_missing = true
skip_empty = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.lcov]
output = "coverage.lcov"
