[project]
name = "chemclaw-cli"
version = "0.1.0"
description = "Command-line client for the ChemClaw agent (agent-claw HTTP/SSE)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "typer>=0.12,<1.0",
    "httpx>=0.27,<1.0",
    "rich>=13,<15",
]

[project.scripts]
chemclaw = "chemclaw_cli.app:app"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["chemclaw_cli*"]
exclude = ["tests*"]
